# Awesome-Agentic-Engineering

./: .gitignore  .markdown-link-check.json  .markdownlint.jsonc  ANTI-PATTERNS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RUBRIC.md
tools/repo-agent/: .gitignore  README.md  pyproject.toml
tools/repo-agent/src/repo_agent/: __init__.py  cli.py  content.py  graduation.py  input_validation.py  llm.py  observability.py  paths.py  rubric.py  server.py  tools.py
tools/repo-agent/src/repo_agent/skills/: __init__.py  entry_draft.py  freshness.py  triage.py
tools/repo-agent/src/repo_agent/workflows/: __init__.py  base.py  github.py  idempotent.py  landscape_scan.py  new_tool.py  render.py  render_site.py  review_pr.py
tools/repo-agent/tests/: conftest.py  test_cli.py  test_content.py  test_golden_set_kappa.py  test_graduation_audit.py  test_input_validation.py  test_llm.py  test_marker_idempotency.py  test_observability_inputs_hash.py  test_observability_schema.py  test_rubric.py  test_safety_write_guard.py  test_skills.py  test_tools.py  test_workflow_landscape_scan.py  test_workflow_new_tool.py  test_workflow_render_site.py  test_workflow_review_pr.py  test_workflows_base.py  test_workflows_render.py
tools/repo-agent/tests/fixtures/: bad-entry.md  good-entry.md  sample-page.html  sample-pr.json
tools/repo-agent/tests/fixtures/golden/: 01-langgraph-orchestration.json  01-langgraph-orchestration.md  02-agent-framework-microsoft.json  02-agent-framework-microsoft.md  03-mcp-protocol.json  03-mcp-protocol.md  04-openai-agents-sdk.json  04-openai-agents-sdk.md  (+35 more)
(+55 files in other folders)
